# dependabot-reviewer

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: dependabot-reviewer.md
docs/: README.md  dependabot-babysit.md  dependabot-fix.md  dependabot-review.md  dependabot-update.md  dependabot-verify.md  knowledge-base.md
docs/superpowers/plans/: 2026-07-02-changelog-from-pr-body.md  2026-07-03-main-branch-health.md
docs/superpowers/specs/: 2026-07-02-changelog-from-pr-body-design.md  2026-07-03-main-branch-health-design.md
mcp-server/: pyproject.toml
mcp-server/dependabot_mcp/: body_parser.py  classifier.py  github_client.py  main.py  models.py  server.py  templates.py
mcp-server/tests/: test_update_branch.py
mcp-server/tests/integration/: test_github_client.py  test_prepare_merge.py  test_server_create_pr.py  test_server_fix_tools.py  test_server_health_tools.py
mcp-server/tests/unit/: test_body_parser.py  test_diff_classifier.py  test_models.py  test_templates.py  test_update_branch.py
skills/: dependabot-review.md
skills/dependabot-babysit/: SKILL.md
skills/dependabot-babysit-cycle/: SKILL.md
skills/dependabot-fix/: SKILL.md
skills/dependabot-review/: SKILL.md
skills/dependabot-update/: SKILL.md
skills/dependabot-verify/: SKILL.md
